# typechat.py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
example/RQ/: main.py
example/auto/: main.py
example/model/: README.md  demo.py  main.py  model.py
example/simple/: README.md  main.py  simple.py
tests/: test_translator.py
typechatpy/: __init__.py  translator.py
