[tool.poetry]
name = "typechatpy"
version = "0.4.0"
description = ""
authors = ["FFengIll <fengyouzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.1.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
